# Beav

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  diff.txt  package.json  readme_en.md
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/binaries/: README.md
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/resources/: knowledge-api-guide.html  minimax-system-voices.json  richpost-theme-guide.html
desktop/src-tauri/src/: README.md  accounts.rs  analytics.rs  app_shared.rs  app_state.README.md  app_state.rs  assistant_core.rs  auth.rs  browser_control_mcp.rs  channel_router.README.md  channel_router.rs  chat_binding.rs  chat_helpers.rs  chat_title.rs  desktop_io.README.md  desktop_io.rs  diagnostics.rs  ffmpeg_runtime.rs  helpers.rs  host_impl.README.md  host_impl.rs  http_utils.rs  interactive_runtime_shared.rs  json_util.rs  knowledge.README.md  knowledge.rs  legacy_import.rs  main.README.md  main.rs  manuscript_package.README.md  manuscript_package.rs  media_generation.README.md  media_generation.rs  media_task_context.rs  member_skill.rs  memory_maintenance.rs  model_config.rs  official_support.README.md  official_support.rs  process_utils.rs  (+6 more)
desktop/src-tauri/src/acp_gateway/: artifacts.rs  audit.rs  auth.rs  discovery.rs  errors.rs  guide.rs  http.rs  manifest.rs  mod.rs  runs.rs  sessions.rs  types.rs
desktop/src-tauri/src/agent/: chat.rs  engine.rs  loop.rs  persistence.rs  provider.rs  session.rs  wander.rs
desktop/src-tauri/src/agent_hub/: acp_runner.rs  mod.rs
desktop/src-tauri/src/ai_model_manager/: README.md  catalog.rs  credentials.rs  defaults.rs  legacy_config.rs  legacy_projection.rs  mod.rs  official_sync.rs  readiness.rs  routes.rs  store.rs  types.rs
desktop/src-tauri/src/events/: mod.rs
desktop/src-tauri/tests/: runtime_probe_cli.rs
(+1101 files in other folders)
