[package]
name = "beav"
version = "2.5.1"
description = "Rust host for the RedConvert desktop migration"
authors = ["Codex"]
edition = "2021"
default-run = "beav"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
arboard = "3.4.1"
base64 = "0.22.1"
calamine = "0.24.0"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
chrono-tz = "0.10.4"
cpal = "0.15.3"
dirs = "5.0.1"
futures-util = "0.3.31"
flate2 = "1.0.35"
glob = "0.3.1"
hound = "3.5.1"
image = { version = "0.25.8", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
normalized-line-endings = "1.0.14"
notify = "8.2.0"
open = "5.3.2"
pdf-extract = "0.7.7"
portable-pty = "0.8.1"
pulldown-cmark = "0.12.2"
regex = "1.12.2"
reqwest = { version = "0.12.8", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls", "stream"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10.8"
shell-words = "1.1.0"
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-notification = "2.0.0"
tauri-plugin-updater = "2.0.0"
tantivy = "0.26.0"
tar = "0.4.43"
time = { version = "0.3.36", features = ["formatting", "parsing"] }
tokio = { version = "1.48.0", features = ["time"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json"] }
url = "2.5.2"
urlencoding = "2.1.3"
zstd = "0.13.2"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tauri = { version = "2.0.0", features = ["test"] }

[features]
default = []
